<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trackr</string>
    <string name="welcome">Welcome to Trackr!</string>
    <string name="action_settings">Settings</string>
    <string name="viewProfile">View Profile</string>
    <string name="startTrack">Start Tracking</string>
    <string name="timeZero">00:00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="back">Back</string>
    <string name="title_activity_track">Track Your Route</string>
    <string name="title_activity_home">Trackr Home</string>
    <string name="btnCreate">Create Map</string>
	<string name="latitute">Latitute: </string>
	<string name="longitutde">Longitutde: </string>
	<string name="speed">Speed: </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="from_location">From:</string>
    <string name="to_location">To:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="confirm">Confirm Password:</string>
</resources>
