<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.trackr.HomeActivity$PlaceholderFragment" android:background="#FFFFFF">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewProfile"
        android:text="@string/viewProfile" android:minWidth="375dp"
        android:minHeight="100dp" android:textSize="27dp" android:textStyle="bold" android:typeface="sans"
        android:background="#FFFFFF"
        android:layout_below="@+id/homeMap" android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="mapView"
        android:text="@string/btnCreate" android:textAlignment="gravity" android:minWidth="375dp"
        android:minHeight="100dp" android:textSize="27dp" android:textStyle="bold" android:typeface="sans"
        android:background="#FFFFFF"
        android:layout_below="@+id/textView1" android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button android:id="@+id/homeMap" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:onClick="TrackView" android:text="ViewMap" android:textAlignment="gravity"
            android:minWidth="375dp" android:minHeight="100dp" android:textSize="27dp" android:textStyle="bold"
            android:typeface="sans" android:background="#FFFFFF"
            android:layout_below="@+id/map" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickLogout"
        android:text="@string/logout"
        android:minHeight="100dp" android:textSize="27dp"
        android:textStyle="bold" android:typeface="sans" android:background="#FFFFFF"
        android:layout_below="@+id/button2" android:layout_centerHorizontal="true"/>

</RelativeLayout>